update location request notifier
also add ability yo check wifi connection on every button click

--- a/yolov3/yolov3/Info.plist
+++ b/yolov3/yolov3/Info.plist
@@ -47,5 +47,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Your location is required for TCAR benefits for you</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Your location is required for TCAR benefits for you</string>
 </dict>
 </plist>
