--- a/convertion_service_tcar/Dockerfile
+++ b/convertion_service_tcar/Dockerfile
@@ -1,13 +1,13 @@
 FROM python:3.7-slim
 
-COPY . /app
-WORKDIR /app
-
 ARG MODEL_CFG_PATH
 ARG MODEL_WEIGHTS_PATH
 ARG MODEL_COREML_PATH
 
+COPY requirements.txt /app/requirements.txt
+WORKDIR /app
 RUN pip install -U pip
 RUN pip install -r requirements.txt
 
-ENTRYPOINT python ./convert.py ${MODEL_CFG_PATH} ${MODEL_WEIGHTS_PATH} ${MODEL_COREML_PATH}
+COPY . /app
+ENTRYPOINT python ./convert.py ${MODEL_CFG_PATH} ${MODEL_WEIGHTS_PATH} ${MODEL_COREML_PATH} --input_resolution 416
