--- a/convertion_service_tcar/Dockerfile
+++ b/convertion_service_tcar/Dockerfile
@@ -1,13 +1,18 @@
-FROM python:3.7-slim
-
-ARG MODEL_CFG_PATH
-ARG MODEL_WEIGHTS_PATH
-ARG MODEL_COREML_PATH
+FROM python:3.7
+#
+#ARG ç
+#ARG MODEL_CFG_PATH
+#ARG MODEL_CFG_TEMP_PATH
+#ARG MODEL_WEIGHTS_PATH
+#ARG MODEL_COREML_PATH
 
 COPY requirements.txt /app/requirements.txt
 WORKDIR /app
+RUN apt-get update
+RUN apt install -y libgl1-mesa-glx
 RUN pip install -U pip
 RUN pip install -r requirements.txt
 
 COPY . /app
-ENTRYPOINT python ./convert.py ${MODEL_CFG_PATH} ${MODEL_WEIGHTS_PATH} ${MODEL_COREML_PATH} --input_resolution 416
+ENTRYPOINT  sh ./prepare_config.sh ${MODEL_CFG_PATH} ${MODEL_CFG_TEMP_PATH} & \
+            python ./convert.py -n ${MODEL_CFG_PATH} -c ${MODEL_CFG_TEMP_PATH} -w ${MODEL_WEIGHTS_PATH} -m ${MODEL_COREML_PATH}
