--- a/convertion_service_tcar/requirements.txt
+++ b/convertion_service_tcar/requirements.txt
@@ -1,4 +1,5 @@
-tensorflow==1.14.0
-keras==2.3.1
+yolov4==3.2.0
+opencv-python==4.5.4.60
 coremltools==5.1.0
-pillow==8.4.0
+keras==2.2.4
+tensorflow==2.5.0
