--- a/yolo_services/docker-compose.yml
+++ b/yolo_services/docker-compose.yml
@@ -16,11 +16,22 @@ services:
         MODEL_WEIGHTS_PATH: './input_models/${MODEL_FILE_NAME}/${MODEL_FILE_NAME}.weights'
         MODEL_COREML_PATH: './output_models/${MODEL_FILE_NAME}/${MODEL_FILE_NAME}.mlpackage'
       volumes: ['./services/convertion:/app']
+    images-download-service:
+      build: ./services/images-download
+      image: getr-network:images-download-service
+      expose:
+        - '6000'
+      networks:
+        - getr-network
+      environment:
+        PYTHONUNBUFFERED: 1,
+        PYTHONIOENCODING: UTF-8
+      volumes: [ './services/images-download:/app' ]
     train-service:
       build: ./services/train
       image: getr-network:train-service
       expose:
-        - '6000'
+        - '7000'
       networks:
         - getr-network
 networks:
