--- a/yolo_services/services/images-download/Dockerfile
+++ b/yolo_services/services/images-download/Dockerfile
@@ -9,6 +9,7 @@ RUN pip install -r requirements.txt
 
 COPY . /app
 
-ENTRYPOINT python ./main.py downloader --classes './classes.txt' -y --type_csv validation --limit 300 \
-    && python ./main.py downloader --classes './classes.txt' -y --type_csv train --limit 1500 \
-    && python ./convert_annotations.py
+ENTRYPOINT python ./main.py downloader --classes './classes.txt' -y --type_csv validation --multiclasses 1 --limit 300 \
+    && python ./main.py downloader --classes './classes.txt' -y --type_csv train --multiclasses 1 --limit 1500 \
+    && python ./convert_annotations.py \
+    && tail -f /dev/null
