--- a/yolo_services/services/conversion/Dockerfile
+++ b/yolo_services/services/conversion/Dockerfile
@@ -10,4 +10,11 @@ RUN pip install -r requirements.txt
 COPY . /app
 
 ENTRYPOINT  sh ./prepare_config.sh ${MODEL_CFG_PATH} ${MODEL_CFG_TEMP_PATH} & \
-            python ./convert.py -n ${MODEL_NAMES} -c ${MODEL_CFG_TEMP_PATH} -w ${MODEL_WEIGHTS_PATH} -m ${MODEL_COREML_PATH}
+            python ./convert.py \
+                -n ${MODEL_NAMES} \
+                -c ${MODEL_CFG_TEMP_PATH} \
+                -w ${MODEL_WEIGHTS_PATH} \
+                -m ${MODEL_COREML_PATH} \
+                -af \
+                -km \
+                -f32 \
